-Refactor code
